--- a/Unreal/CarlaUE4/Config/DefaultEngine.ini
+++ b/Unreal/CarlaUE4/Config/DefaultEngine.ini
@@ -28,7 +28,7 @@ r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
 r.CustomDepth=3
 r.Streaming.PoolSize=2000
-r.TextureStreaming=False
+r.TextureStreaming=True
 
 [/Script/AIModule.AISense_Sight]
 bAutoRegisterAllPawnsAsSources=False
@@ -55,7 +55,6 @@ DefaultFluidFriction=0.300000
 SimulateScratchMemorySize=262144
 RagdollAggregateThreshold=4
 TriangleMeshTriangleMinAreaThreshold=5.000000
-bEnableAsyncScene=False
 bEnableShapeSharing=False
 bEnablePCM=False
 bEnableStabilization=False
@@ -88,8 +87,8 @@ bSubsteppingAsync=False
 MaxSubstepDeltaTime=0.016667
 MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
-AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
 
